fix dark theme issues

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 
 :root {
   --primary-clr-dark: #20252b;
+  --secondary-clr-dark: #0d0d12;
   --accent-clr: #f86551;
   --primary-clr-light: #fff;
   --primary-text-clr: #c46ff1;
