--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,12 @@ select:-webkit-autofill {
   transition: transform 0.2s;
 }
 
+.game_screenshots {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+}
+
 .game:hover {
   filter: brightness(0.85);
   transform: scale(0.95);
@@ -59,6 +65,10 @@ select:-webkit-autofill {
 
 @media (min-width: 500px) {
   .games-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  }
+  .game_screenshots {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   }
