update bg light color

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   --text-clr-primary: #fff;
   --primary-clr: #1260e8;
   --bg-primary-clr-light: #f7f7f7;
-  --bg-secondary-clr-light: #f7f7f7;
+  --bg-secondary-clr-light: #efefef;
 }
 
 body {
