--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,10 @@ body {
   font-family: "Comfortaa", sans-serif;
 }
 
+.app {
+  height: 100vh;
+}
+
 input:-webkit-autofill,
 textarea:-webkit-autofill,
 select:-webkit-autofill {
