--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,17 @@ select:-webkit-autofill {
   animation: rotation 1s linear infinite;
 }
 
+.image-loader {
+  width: 1.8rem;
+  height: 1.8rem;
+  border: 3px solid #cfcfcf;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
 @media (min-width: 500px) {
   .games-container {
     display: grid;
