--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,51 @@ select:-webkit-autofill {
   animation: rotation 1s linear infinite;
 }
 
+.shimmer {
+  animation-duration: 2.2s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: shimmer;
+  animation-timing-function: linear;
+  background: #ddd;
+  background: linear-gradient(to right, #dfdfdf 8%, #f0f0f0 18%, #dfdfdf 33%);
+  background-size: 1200px 100%;
+}
+
+.shimmer-dark {
+  background: #3a3a3a;
+  background-image: linear-gradient(
+    to left,
+    #3a3a3a 0%,
+    #3f3f3f 10%,
+    #4a4a4a 20%,
+    #3f3f3f 30%,
+    #3a3a3a 50%,
+    #3a3a3a 100%
+  );
+  animation-duration: 2.2s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: shimmer;
+  animation-timing-function: linear;
+  background-size: 1200px 100%;
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: -1200px 0;
+  }
+  100% {
+    background-position: 1200px 0;
+  }
+}
+
+@keyframes shimmer {
+  100% {
+    -webkit-mask-position: left;
+  }
+}
+
 @media (min-width: 500px) {
   .games-container {
     display: grid;
